# SyntheticGenerationExperiments

./: .gitignore  EXPERIMENT_SPEC.md  README.md  pyproject.toml
.cursor/rules/: common-coding-style.mdc  experimentation-rules.mdc  persona.mdc  planner.mdc  tech-stack.mdc
analysis/: experiment_agreement.py  leaderboard.csv  temporal_baseline_leaderboard.py
data/splits/: domain_synth_seed42.json  opentdb_combination_binary_seed42.json  opentdb_ensemble_seed42.json  opentdb_setfit_seed42.json  playground_arc_med_mmlu_seed42.json  seed42.json
data/synthetic/: baseline_exp02.json  from_baseline_exp06.json
notebooks/: colab_domain_synthetic.ipynb  colab_setfit_experiments.ipynb  domain_synthetic.ipynb  playground_manual_lab.ipynb
routers/: __init__.py  main.py
routers/baselines/: modernbert_probe.py  setfit_ovr.py  setfit_probe.py
routers/core/: cache.py  constants.py  data.py  harness.py  metrics_extras.py  modernbert_encoder.py  splits.py
routers/ensemble/: __init__.py  routing.py
routers/experiments/: _common.py  exp01_baseline.py  exp02_failure_synth.py  (+10 more)
tests/: test_async_llm.py  test_batching.py  test_frozen_synthetic_format.py  test_generator_opentdb_smoke.py  test_google_client_smoke.py  test_holdout_selection.py  test_metrics_extras.py  test_ovr_routing.py  test_parse_smart.py  test_playground_ids.py  test_playground_source_filter.py  test_playground_stratified_sampling.py  test_setfit_config.py  test_setfit_prompts.py  test_smart05_skip.py  test_smart09_iterative.py  test_smart_concurrency_smoke.py  test_smart_selection.py  test_synthetic_parse.py
(+65 files in other folders)
