[project]
name = "synthetic-hardnlp"
version = "0.1.0"
description = "Synthetic data collision experiments for RouterArena Domain routing"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=24.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "tqdm>=4.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "joblib>=1.3",
    "huggingface-hub>=0.20",
    "transformers>=4.40,<5.0",
    "torch>=2.0",
    "accelerate>=0.30",
]

[project.optional-dependencies]
llm = ["ollama>=0.4"]
playground = ["ollama>=0.4", "setfit>=1.0", "datasets>=2.0", "sentence-transformers>=3.0"]
setfit = [
  "setfit>=1.0",
  "datasets>=2.0",
  "sentence-transformers>=3.0",
  "fastembed>=0.4",
  "ollama>=0.4",
  "openai>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
